HOTFIX: Fixed Lesson fetching