@@ -6,11 +6,11 @@ import com.pnu.system.timetable.api.dto.LessonUpdateRequest;
 import com.pnu.system.timetable.api.dto.board.LessonBoardLessonDto;
 import com.pnu.system.timetable.api.dto.board.LessonBoardResponseDto;
 import com.pnu.system.timetable.domain.Lesson;
+import com.pnu.system.timetable.domain.LessonSearch;
 import org.mapstruct.Mapper;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
@@ -24,12 +24,14 @@ public interface LessonMapper {
 
     LessonBoardResponseDto asLessonBoardResponseDto(LocalDate date, List<LessonBoardLessonDto> lessons);
 
-    default List<LessonBoardResponseDto> asLessonBoard(Map<LocalDate, List<LessonBoardLessonDto>> lessonMap) {
-        return lessonMap
-                .entrySet()
-                .stream()
-                .map(entry -> asLessonBoardResponseDto(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+    default List<LessonBoardResponseDto> asLessonBoard(List<LessonSearch> lessons) {
+        return lessons.stream()
+                .map(this::asLessonBoardLessonDto)
+                .collect(Collectors.groupingBy(LessonBoardLessonDto::getDate))
+                .entrySet().stream().map(entry -> asLessonBoardResponseDto(entry.getKey(), entry.getValue()))
+                .toList();
     }
+
+    LessonBoardLessonDto asLessonBoardLessonDto(LessonSearch lessons);
 
 }
